# geospatial_data_processing

./: .flake8  .gitignore  .pre-commit-config.yaml  13_01_2024_play_with_concat_images.ipynb  CODEOWNERS  LICENSE  README.md  main.py  pyproject.toml  setup.cfg  test_file.py  utils.py
docs/: INFORMAL-README.md
notebooks/: 12_01_2024_data_investigation.ipynb  12_01_2024_first_pipeline.ipynb  13_01_2024_play_with_concat_images.ipynb  challenge.ipynb
