[tool.poetry]
name = "geospatial-data-processing"
version = "0.1.0"
description = "Geospatial data processing home assigment for one company."
authors = ["Karim <st.herbinar@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
rasterio = "^1.4.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.14.1"
pillow = "^11.1.0"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
known_first_party = ["ny_airflow_utils", "data_lake.config"]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true

[tool.pytest.ini_options]
addopts = ["-r", "xXw", "-vv", "--durations=0", "--junitxml", "junit_results.xml", "--cov=projects/lake", "--no-cov-on-fail", "--cov-report=term-missing", "--cov-report=html", "--cov-report=xml:coverage.xml", "--cov-config=.coveragerc"]